Bug 4: corrigida a formatação da mensagem da seção azul com display flex, flex-direction, align-items, word-wrap, font-weight, font-family e font-size

--- a/semana-2/aula1/bugfixes/index.css
+++ b/semana-2/aula1/bugfixes/index.css
@@ -9,11 +9,24 @@
     padding: 0;
 }
 
+html {
+    font-size: 10px;
+}
+
+body {
+    font-family: sans-serif;
+    font-size: 2em;
+}
+
 h2 {
     background-color: #fe7e02;
     padding: 10px 5px 10px 5px;
     color: white;
     text-align: center;
+}
+
+h3 {
+    font-weight: normal;
 }
 
 input {
@@ -70,10 +83,22 @@ div img {
     background-color: #2274a5;
     color: white;
     padding-top: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#container-de-descricao p:first-child {
+    width: 12%;
+    word-wrap: break-word;
 }
 
 #container-de-descricao>ol {
-    padding: 15px 0px;
+    padding: 15px 0;
+}
+
+#container-de-descricao>ol>li {
+    padding: 0 15px;
 }
 
 #container-para-comprar {
